Bug 2755 - speedstep-centrino oopses on Asus M2400N w/ kernel 2.6.6
Summary: speedstep-centrino oopses on Asus M2400N w/ kernel 2.6.6
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Config-Processors (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Robert Moore
URL:
Keywords:
: 2781 2843 (view as bug list)
Depends on:
Blocks:
 
Reported: 2004-05-22 16:54 UTC by Jochen Spieker
Modified: 2004-11-04 13:29 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.6
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
complete syslog from bootup to oops (34.99 KB, text/plain)
2004-05-22 16:55 UTC, Jochen Spieker
Details
kernel config for 2.6.6 (taken from debian kernel package 2.6.6-1-686) (51.48 KB, text/plain)
2004-05-22 16:56 UTC, Jochen Spieker
Details
acpidmp output on my ASUS M2N with the 0208 BIOS (128.14 KB, text/plain)
2004-05-26 11:54 UTC, Mario Lorenz
Details
2.4 patch (677 bytes, patch)
2004-11-04 13:25 UTC, Len Brown
Details | Diff

Description Jochen Spieker 2004-05-22 16:54:20 UTC
Distribution: Debian/sid
Hardware Environment: Asus M2400N (Pentium M 1.3GHz)
Software Environment: Debian kernel-image-2.6.6-1-686 & vanilla 2.6.6
Problem Description:

When compiling a custom kernel v2.6.6 with cpufreq support and
speedstep-centrino=y (which works like a charm with previous kernel versions),
my machine panics at boot time. I was not able to transcribe the whole call
trace from the screen because I couldn't scroll up.

Today I installed the package kernel-image-2.6.6-1.686 (config attached) from
Debian unstable which comes with cpufreq compiled as module. The machine booted
up just fine, but without cpufreq support. modprobing speedstep_centrino
resulted in a kernel oops and a hanging machine. I tried to shut down using the
power button, but that failed, too. Luckily, this time the oops made it to
syslog (attached).

Steps to reproduce:
Compile 2.6.6 w/ attached config (esp. CONFIG_X86_SPEEDSTEP_CENTRINO=y) and boot
on Asus M2400N.
Comment 1 Jochen Spieker 2004-05-22 16:55:13 UTC
Created attachment 2949 [details]
complete syslog from bootup to oops
Comment 2 Jochen Spieker 2004-05-22 16:56:22 UTC
Created attachment 2950 [details]
kernel config for 2.6.6 (taken from debian kernel package 2.6.6-1-686)
Comment 3 Mario Lorenz 2004-05-23 01:05:03 UTC
I was just about entering this bug, too. Vs. 2.6.5/2.6.6 in FC2/FC2-devel
and also 2.6.6-mm5 that I tried as reference.


Out of curiosity: Which BIOS version are you using? 0206 has had problems in the
past, especially with the local APIC, the new 0208 version seems to fix the lapic
problems, it still exhibits this particular oops, however as a side effect I get
problems with ALSA - the semaphore not ready messages discussed in several places
but not yet fixed.
Comment 4 Jochen Spieker 2004-05-23 03:30:55 UTC
I am using the latest BIOS version (v0208, dated 2003/03/08 on Asus website) and
I also receive a lot of the "failed to acquire semaphore" messages - even
without any Alsa modules loaded. But I think these messages are unrelated to the
current problem.

I was now successful in booting 2.6.6-bk8 with SpeedStep. The cpufreq modules
have not been autoloaded, but I could modprobe speedstep_centrino manually. What
I changed was the kernel option CONFIG_X86_SPEEDSTEP_CENTRINO_ACPI to 'n'. At
least there should be a hint in the docs that this option doesn't work with the
M2N. Currently the help says "If in doubt, say Y" which is why I had it on in my
first tries.
Comment 5 Wang, Zhenyu Z 2004-05-25 23:35:04 UTC
Could you attach your acpidump?

thanks,
-zhen
Comment 6 Luming Yu 2004-05-25 23:43:21 UTC
This is a known issue. Testing patch is filed at 
https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=121760

Thanks,
Luming
Comment 7 Mario Lorenz 2004-05-26 11:54:08 UTC
Created attachment 2979 [details]
acpidmp output on my ASUS M2N with the 0208 BIOS

If this is not what you wanted, please let me know.
Comment 8 Mario Lorenz 2004-05-26 11:57:02 UTC
I can confirm that the referenced patch on redhat bugzilla fixes the problem
for me (tested on a 2.6.6-mm5).


Comment 9 Len Brown 2004-05-26 18:42:56 UTC
fix in RH bugzilla has been integrated into next ACPICA drop -- marking this 
as resolved.
Comment 10 Jochen Spieker 2004-05-27 10:33:48 UTC
I tried the patch with 2.6.7-rc1 and it works fine. Thanks a lot.
Comment 11 Len Brown 2004-06-17 21:06:14 UTC
*** Bug 2781 has been marked as a duplicate of this bug. ***
Comment 12 Robert Moore 2004-07-23 10:51:23 UTC
*** Bug 2843 has been marked as a duplicate of this bug. ***
Comment 13 Len Brown 2004-11-04 13:23:29 UTC
shipped in ACPICA 20040527
which was included in linux-2.6.9
Comment 14 Len Brown 2004-11-04 13:25:13 UTC
Created attachment 3965 [details]
2.4 patch

extracted just this fix from ACPICA 20040527 for benefit of linux-2.4.

Note You need to log in before you can comment on or make changes to this bug.