Summary of changes from v2.4.28-rc2 to v2.4.28-rc3 ============================================

Aaron Grothe:
  o [CRYPTO]: Add Anubis support

Chris Wright:
  o binfmt_elf: handle partial reads gracefully

David S. Miller:
  o [TG3]: Use ioremap_nocache()
  o [TG3]: Bump driver version and reldate
  o Cset exclude: davem@nuts.davemloft.net|ChangeSet|20040831000448|00808
  o Cset exclude: pablo@eurodev.net|ChangeSet|20040831000223|00117
  o [ATM]: Put back mistakedly removed LEC procfs code

Herbert Xu:
  o [NET]: Fix tbl->entries race

Len Brown:
  o [ACPI] fix ASUS boot crash http://bugzilla.kernel.org/show_bug.cgi?id=2755
  o [ACPI] fix poweroff regression backport from 2.6 and ACPICA 20040427 http://bugzilla.kernel.org/show_bug.cgi?id=2109

Marcelo Tosatti:
  o Changed EXTRAVERSION to -rc3

Mike Miller:
  o cleans up warnings in 32/64-bit conversions

Mike Waychison:
  o [TG3]: Fix fiber hw autoneg bounces

Patrick McHardy:
  o [PKT_SCHED]: Don't try to destroy builtin qdiscs

Stefan Esser:
  o Improved smbfs client overflow fix

Thomas Graf:
  o [NET]: Fix neighbour/arp build
  o [PKT_SCHED]: break is not enough to stop walking

Trond Myklebust:
  o NFS: Always wake up tasks that are waiting on the sillyrenamed file to complete

Wensong Zhang:
  o [IPVS]: Update version to 1.2.1