fs/smbfs/proc.c
@@ -1290,11 +1290,11 @@ smb_proc_read(struct inode *inode, loff_t offset, int count, char *data)
 
 	/* we can NOT simply trust the data_len given by the server ... */
 	if (data_len > count ||
-	    data_len > server->packet_size - (buf+3 - server->packet)) {
-		printk(KERN_ERR "smb_proc_read: invalid data length!! "
-		       "%d > %d || %d > %d - (%p - %p)\n",
+		(buf+3 - server->packet) + data_len > server->packet_size) {
+		printk(KERN_ERR "smb_proc_read: invalid data length/offset!! "
+		       "%d > %d || (%p - %p) + %d > %d\n",
 		       data_len, count,
-		       data_len, server->packet_size, buf+3, server->packet);
+		       buf+3, server->packet, data_len, server->packet_size);
 		result = -EIO;
 		goto out;
 	}
@@ -1381,11 +1381,11 @@ smb_proc_readX(struct inode *inode, loff_t offset, int count, char *data)
 
 	/* we can NOT simply trust the info given by the server ... */
 	if (data_len > count ||
-	    data_len > server->packet_size - (buf - server->packet)) {
-		printk(KERN_ERR "smb_proc_read: invalid data length!! "
-		       "%d > %d || %d > %d - (%p - %p)\n",
+		(buf - server->packet) + data_len > server->packet_size) {
+		printk(KERN_ERR "smb_proc_readX: invalid data length/offset!! "
+		       "%d > %d || (%p - %p) + %d > %d\n",
 		       data_len, count,
-		       data_len, server->packet_size, buf, server->packet);
+		       buf, server->packet, data_len, server->packet_size);
 		result = -EIO;
 		goto out;
 	}
